--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -58,6 +58,7 @@ BEGIN
     GROUPBOX        "",IDC_REPLACEINSELECTION,192,50,170,23
     CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,58,59,10
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,268,38,90,14
+	CONTROL			"Backward direction", IDC_BACKWARDDIRECTION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 12, 76, 140, 15
     CONTROL         "Match &whole word only",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
     CONTROL         "Wra&p around",IDWRAP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,112,110,15
@@ -67,8 +68,7 @@ BEGIN
                     "Button",BS_AUTORADIOBUTTON,12,155,145,10
     CONTROL         "Re&gular expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,12,167,78,10
     CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "<< Find", IDC_FINDPREV, 268, 20, 45, 14, WS_GROUP | BS_MULTILINE
-    PUSHBUTTON      "Find >>", IDOK, 313, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "Find Next",IDOK,268,20,90,14,WS_GROUP
     PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,90,14
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,56,90,21,BS_MULTILINE
     PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,90,21,BS_MULTILINE
