--- a/PowerEditor/src/WinControls/Grid/ShortcutMapper.rc
+++ b/PowerEditor/src/WinControls/Grid/ShortcutMapper.rc
@@ -33,9 +33,9 @@
 #define IDC_STATIC	-1
 #endif
 
-IDD_SHORTCUTMAPPER_DLG DIALOGEX 0, 0, 391, 344
+IDD_SHORTCUTMAPPER_DLG DIALOGEX 0, 0, 450, 344
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+    WS_SYSMENU | WS_MAXIMIZEBOX | WS_THICKFRAME
 //EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Shortcut mapper"
 FONT 8, TEXT("MS Shell Dlg"), 400, 0, 0x1
@@ -45,5 +45,5 @@ BEGIN
     DEFPUSHBUTTON   "Clear", IDM_BABYGRID_CLEAR,172,319,47,14
 	DEFPUSHBUTTON   "Delete", IDM_BABYGRID_DELETE, 226, 319, 47, 14 
     DEFPUSHBUTTON   "Close",IDOK,280,319,47,14
-    EDITTEXT        IDC_BABYGRID_INFO,4,279,383,29,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
+    EDITTEXT        IDC_BABYGRID_INFO,4,279,440,29,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
 END
