--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -31,7 +31,7 @@
 #include <windows.h>
 #include "FindReplaceDlg_rc.h"
 
-IDD_FIND_REPLACE_DLG DIALOGEX 36, 44, 367, 200
+IDD_FIND_REPLACE_DLG DIALOGEX 36, 44, 382, 200
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
@@ -54,11 +54,11 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,270,101,94,15
     CONTROL         "Book&mark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,52,100,15
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
-    PUSHBUTTON      "Mark All",IDCMARKALL,268,20,90,14
+    PUSHBUTTON      "Mark All",IDCMARKALL,268,20,91,14
     GROUPBOX        "",IDC_REPLACEINSELECTION,192,50,170,23
     CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,58,59,10
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,268,38,90,14
-	CONTROL			"Backward direction", IDC_BACKWARDDIRECTION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 12, 76, 140, 15
+    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,268,38,91,14
+    CONTROL         "Backward direction", IDC_BACKWARDDIRECTION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 12, 76, 140, 15
     CONTROL         "Match &whole word only",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
     CONTROL         "Wra&p around",IDWRAP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,112,110,15
@@ -68,16 +68,19 @@ BEGIN
                     "Button",BS_AUTORADIOBUTTON,12,155,145,10
     CONTROL         "Re&gular expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,12,167,78,10
     CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "Find Next",IDOK,268,20,90,14,WS_GROUP
-    PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,90,14
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,56,90,21,BS_MULTILINE
-    PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,90,21,BS_MULTILINE
-    PUSHBUTTON      "&Replace",IDREPLACE,268,38,90,14
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,268,56,90,14
-    PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,74,90,21,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,268,20,90,14,WS_GROUP
-    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,268,38,90,14
-    PUSHBUTTON      "Close",IDCANCEL,268,98,90,14
+    PUSHBUTTON      "<<    ", IDC_FINDPREV, 268, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "    >>", IDC_FINDNEXT, 313, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "Find Next",IDOK,268,20,91,14,WS_GROUP
+	CONTROL         "", IDC_2_BUTTONS_MODE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 363, 20, 15, 15
+    PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,91,14
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,56,91,21,BS_MULTILINE
+    PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,91,21,BS_MULTILINE
+    PUSHBUTTON      "&Replace",IDREPLACE,268,38,91,14
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,268,56,91,14
+    PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,74,91,21,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,268,20,91,14,WS_GROUP
+    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,268,38,91,14
+    PUSHBUTTON      "Close",IDCANCEL,268,98,91,14
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,258,131,99,48
     CONTROL         "Transparenc&y",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,254,131,80,10
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,268,143,85,10
