--- a/BoostPath.props
+++ b/BoostPath.props
@@ -6,6 +6,7 @@
     <PostSciBuild>cleanup.bat ../../PowerEditor\bin64\tools\cleandll.bat ../../PowerEditor\bin64\$(TargetName)$(TargetExt)</PostSciBuild>
     <BoostLibs_32>$(BOOST)\bin.v2\libs\regex\build\msvc-14.2\release\link-static\runtime-link-static\threading-multi</BoostLibs_32>
     <BoostLibs_32r>$(BOOST)\bin.v2\libs\regex\build\msvc-14.2\release\link-static\runtime-link-static\threading-multi</BoostLibs_32r>
+    <BOOST>D:\Code\FigureOut\Textrument\boost_1_74_0</BOOST>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup>
@@ -13,7 +14,7 @@
       <AdditionalDependencies>libboost_regex-vc142-mt-s-x64-1_74.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(BOOST)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(BOOST);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SCI_OWNREGEX</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -29,6 +30,9 @@
     </BuildMacro>
     <BuildMacro Include="BoostLibs_32r">
       <Value>$(BoostLibs_32r)</Value>
+    </BuildMacro>
+    <BuildMacro Include="BOOST">
+      <Value>$(BOOST)</Value>
     </BuildMacro>
   </ItemGroup>
 </Project>
